--- a/public/html/assignment.html
+++ b/public/html/assignment.html
@@ -34,6 +34,9 @@
             <li class="nav-item mr-2" id="allStudents">
                 <a class="nav-link" href="#">See All Students</a>
             </li>
+            <li class="nav-item mr-2" id="all">
+                <a class="nav-link" href="#"></a>
+            </li>
             <li class="nav-item mr-2" id="navRegister">
                 <a class="nav-link" href="#">Add New Assignment</a>
             </li>
