--- a/public/html/assignment.html
+++ b/public/html/assignment.html
@@ -23,7 +23,7 @@
 </head>
 <!-- ############ Nav Bar ############ -->
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="./index.html">
+    <a class="navbar-brand" href="#">
         <h1>My Grade Book</h1>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
@@ -33,9 +33,6 @@
         <ul class="navbar-nav ml-2">
             <li class="nav-item mr-2" id="allStudents">
                 <a class="nav-link" href="#">See All Students</a>
-            </li>
-            <li class="nav-item mr-2" id="all">
-                <a class="nav-link" href="#"></a>
             </li>
             <li class="nav-item mr-2" id="navRegister">
                 <a class="nav-link" href="#">Add New Assignment</a>
@@ -51,14 +48,12 @@
 </nav>
 
 <body>
-    // LANDING PAGE will show all students, the grade point average for them
-    // and a button that will take you to that students assignment page
 
-    // INDIVIDUAL STUDENTS page will take you to one particular students complete list of assignments
+    // ADD NEW ASSIGNMENT portion at the top of the page where the user enters the new assignment info 
+    // (assignment name, assignment point value, assignment due date, subject)
 
-    // ADD NEW ASSIGNMENT will give inputs for assignment name,
-    // due date, and subject and then show every students name as well as an input
-    // box for their grade and an input box for a comment
+    // page also has every asignment listed as well as two buttons for each assignment which are
+    // edit and grade
  
 </body>
 
