updated navbar text

--- a/public/html/individualStudent.html
+++ b/public/html/individualStudent.html
@@ -23,29 +23,29 @@
 </head>
 <!-- ############ Nav Bar ############ -->
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="./index.html">
-        <h1>My Grade Book</h1>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    </button>
-    <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav ml-2">
-            <li class="nav-item mr-2" id="allStudents">
-                <a class="nav-link" href="#">See All Students</a>
-            </li>
-            <li class="nav-item mr-2" id="navRegister">
-                <a class="nav-link" href="#">Add New Assignment</a>
-            </li>
-            <li class="nav-item mr-2" id="navLogout">
-                <a class="nav-link" href="#">Log out</a>
-            </li>
-        </ul>
-        <span class="ml-auto navbar-text">
-            <h3></h3>
-        </span>
-    </div>
-</nav>
+        <a class="navbar-brand" href="#">
+            <h1>My Grade Book</h1>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav ml-2">
+                <li class="nav-item mr-2" id="allStudents">
+                    <a class="nav-link" href="#">My Students</a>
+                </li>
+                <li class="nav-item mr-2" id="addNewAssign">
+                    <a class="nav-link" href="#">Add New Assignment</a>
+                </li>
+                <li class="nav-item mr-2" id="navLogout">
+                    <a class="nav-link" href="#">Log out</a>
+                </li>
+            </ul>
+            <span class="ml-auto navbar-text">
+                <h3></h3>
+            </span>
+        </div>
+    </nav>
 
 <body>
     // INDIVIDUAL STUDENTS page will take you to one particular students complete list of assignments
