--- a/public/html/teachLanding.html
+++ b/public/html/teachLanding.html
@@ -23,7 +23,7 @@
 </head>
 <!-- ############ Nav Bar ############ -->
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="./index.html">
+    <a class="navbar-brand" href="#">
         <h1>My Grade Book</h1>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
@@ -32,9 +32,9 @@
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav ml-2">
             <li class="nav-item mr-2" id="allStudents">
-                <a class="nav-link" href="#">See All Students</a>
+                <a class="nav-link" href="#">My Students</a>
             </li>
-            <li class="nav-item mr-2" id="navRegister">
+            <li class="nav-item mr-2" id="addNewAssign">
                 <a class="nav-link" href="#">Add New Assignment</a>
             </li>
             <li class="nav-item mr-2" id="navLogout">
@@ -51,12 +51,7 @@
     // LANDING PAGE will show all students, the grade point average for them
     // and a button that will take you to that students assignment page
 
-    // INDIVIDUAL STUDENTS page will take you to one particular students complete list of assignments
 
-    // ADD NEW ASSIGNMENT will give inputs for assignment name,
-    // due date, and subject and then show every students name as well as an input
-    // box for their grade and an input box for a comment
- 
 </body>
 
 
