--- a/public/html/logInSingUp.html
+++ b/public/html/logInSingUp.html
@@ -16,6 +16,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles.css" media="screen" title="no title" charset="utf-8">
@@ -72,7 +73,7 @@
     </div>
     <div class="jumbotron jumbotron1 jumbotron-fluid" id="registerDiv">
         <div class="container">
-            <form>
+            <form id="register">
                 <div class="row">
                     <h1>Register</h1>
                 </div>
@@ -80,11 +81,11 @@
                     <div class="col-sm">
                         <div class="form-group">
                             <label for="email">Email Address</label>
-                            <input type="email" class="form-control email" placeholder="Enter Email">
+                            <input type="email" class="form-control email" id="register-email" placeholder="Enter Email">
                         </div>
                         <div class="form-group">
                             <label for="password">Password</label>
-                            <input type="password" class="form-control password" placeholder="Enter Password">
+                            <input type="password" class="form-control password" id="register-password" placeholder="Enter Password">
                         </div>
                     </div>
                     <div class="col-sm">
@@ -140,102 +141,100 @@
     </div>
 
 </body>
-<script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script>
 <script type="text/javascript">
-    $(document).ready(function () {
 
-        displayLogin();
+    displayLogin();
+
+    // Function to run when user clicks Register button in navbar
+    $("#navRegister").click(displayRegister);
+
+    function displayRegister() {
+        $("#registerDiv").show();
+        $("#loginDiv").hide();
+    }
+
+    // Function to run when user clicks Login button in navbar
+    $("#navLogin").click(displayLogin);
+
+    function displayLogin() {
+        console.log("login clicked");
+        $("#loginDiv").show();
+        $("#registerDiv").hide();
+    }
+
+    // Function to run when user clicks Logout button in navbar
+    $("#navLogout").click(userLogOut);
+
+    function userLogOut() {
+        console.log("logout clicked");
+        // firebase.auth().signOut();
+        $("#loginDiv").hide();
+        $("#registerDiv").hide();
+    };
+
+    $("#showLogin").click(displayLogin);
+
+    $("#showRegister").click(displayRegister);
+
+    // Firebase setup
+    // Initialize Firebase
+    var config = {
+        apiKey: "AIzaSyCxWT735EGIcbdNLZyxsWYns14mJ7UvOtg",
+        authDomain: "mygradebook-355d0.firebaseapp.com",
+        databaseURL: "https://mygradebook-355d0.firebaseio.com",
+        projectId: "mygradebook-355d0",
+        storageBucket: "mygradebook-355d0.appspot.com",
+        messagingSenderId: "619478408217"
+    };
+    firebase.initializeApp(config);
+
+    var database = firebase.database();
+
+    // Function to run based on if user is logged in or not
+    firebase.auth().onAuthStateChanged(function (user) {
+        if (user) {
+            console.log(user);
+            // User is signed in
+            // display landing page
+        } else {
+            // No user is signed in.
+            // userLogOut();
+            // display sorry you are not recognized by our database as a student
+        }
+    });
+
+    // Function to register a new user
+    $("#register").on("submit", function (event) {
         event.preventDefault();
-        // Function to run when user clicks Register button in navbar
-        $("#navRegister").click(displayRegister);
 
-        function displayRegister() {
-            $("#registerDiv").show();
-            $("#loginDiv").hide();
-        }
+        var email = $("#register-email").val();
+        var password = $("#register-password").val();
+        console.log(email);
+        console.log(password);
+        firebase.auth().createUserWithEmailAndPassword(email, password)
+            .then(function (user) {
+                console.log(user);
+            })
+            .catch(function (err) {
+                console.log(err);
+            })
+    });
 
-        // Function to run when user clicks Login button in navbar
-        $("#navLogin").click(displayLogin);
+    // Function to login existing user
+    $("#login").on("submit", function (event) {
+        event.preventDefault();
 
-        function displayLogin() {
-            console.log("login clicked");
-            $("#loginDiv").show();
-            $("#registerDiv").hide();
-        }
+        var email = $(".login .email").val();
+        var password = $(".login .password").val();
 
-        // Function to run when user clicks Logout button in navbar
-        $("#navLogout").click(userLogOut);
-
-        function userLogOut() {
-            console.log("logout clicked");
-            // firebase.auth().signOut();
-            $("#loginDiv").hide();
-            $("#registerDiv").hide();
-        };
-
-        $("#showLogin").click(displayLogin);
-
-        $("#showRegister").click(displayRegister);
-
-        // Firebase setup
-        // Initialize Firebase
-        var config = {
-            apiKey: "AIzaSyCxWT735EGIcbdNLZyxsWYns14mJ7UvOtg",
-            authDomain: "mygradebook-355d0.firebaseapp.com",
-            databaseURL: "https://mygradebook-355d0.firebaseio.com",
-            projectId: "mygradebook-355d0",
-            storageBucket: "mygradebook-355d0.appspot.com",
-            messagingSenderId: "619478408217"
-        };
-        firebase.initializeApp(config);
-
-        var database = firebase.database();
-
-        // Function to run based on if user is logged in or not
-        firebase.auth().onAuthStateChanged(function (user) {
-            if (user) {
-                // User is signed in
-                // display landing page
-            } else {
-                // No user is signed in.
-                userLogOut();
-                // display sorry you are not recognized by our database as a student
-            }
-        });
-
-        // Function to register a new user
-        $(".register form").on("submit", function (event) {
-            event.preventDefault();
-
-            var email = $(".register .email").val();
-            var password = $(".register .password").val();
-
-            firebase.auth().createUserWithEmailAndPassword(email, password)
-                .then(function (user) {
-                    console.log(user);
-                })
-                .catch(function (err) {
-                    console.log(err);
-                })
-        });
-
-        // Function to login existing user
-        $(".login form").on("submit", function (event) {
-            event.preventDefault();
-
-            var email = $(".login .email").val();
-            var password = $(".login .password").val();
-
-            firebase.auth().signInWithEmailAndPassword(email, password)
-                .then(function (user) {
-                    console.log(user);
-                })
-                .catch(function (err) {
-                    console.log(err);
-                });
-        });
-
-    })
+        firebase.auth().signInWithEmailAndPassword(email, password)
+            .then(function (user) {
+                console.log(user);
+            })
+            .catch(function (err) {
+                console.log(err);
+            });
+    });
 
 </script>
 
