--- a/public/html/teachLanding.html
+++ b/public/html/teachLanding.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- ############ Reset CSS ############ -->
-    <!-- <link href="./assets/css/reset.css" rel="stylesheet"> -->
+    <link href="./reset.css" rel="stylesheet">
     <!-- ############ Bootstrap CDN ############ -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
