--- a/public/html/assignment.html
+++ b/public/html/assignment.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- ############ Reset CSS ############ -->
-    <link href="./reset.css" rel="stylesheet">
+    <link href="../styles/reset.css" rel="stylesheet">
     <!-- ############ Bootstrap CDN ############ -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -18,7 +18,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="../styles/styles.css" media="screen" title="no title" charset="utf-8">
     <title>My Grade Book</title>
 </head>
 <!-- ############ Nav Bar ############ -->
