--- a/public/html/logInSingUp.html
+++ b/public/html/logInSingUp.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- ############ Reset CSS ############ -->
-    <!-- <link href="./assets/css/reset.css" rel="stylesheet"> -->
+    <link href="../styles/reset.css" rel="stylesheet">
     <!-- ############ Bootstrap CDN ############ -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -16,10 +16,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="../styles/styles.css" media="screen" title="no title" charset="utf-8">
     <title>My Grade Book</title>
 </head>
 <!-- ############ Nav Bar ############ -->
@@ -81,11 +80,13 @@
                     <div class="col-sm">
                         <div class="form-group">
                             <label for="email">Email Address</label>
-                            <input type="email" class="form-control email" id="register-email" placeholder="Enter Email">
+                            <input type="email" class="form-control email" id="register-email"
+                                placeholder="Enter Email">
                         </div>
                         <div class="form-group">
                             <label for="password">Password</label>
-                            <input type="password" class="form-control password" id="register-password" placeholder="Enter Password">
+                            <input type="password" class="form-control password" id="register-password"
+                                placeholder="Enter Password">
                         </div>
                     </div>
                     <div class="col-sm">
