--- a/public/html/individualStudent.html
+++ b/public/html/individualStudent.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- ############ Reset CSS ############ -->
-    <link href="./reset.css" rel="stylesheet">
+    <link href="../styles/reset.css" rel="stylesheet">
     <!-- ############ Bootstrap CDN ############ -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -18,34 +18,34 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="../styles/styles.css" media="screen" title="no title" charset="utf-8">
     <title>My Grade Book</title>
 </head>
 <!-- ############ Nav Bar ############ -->
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-            <h1>My Grade Book</h1>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav ml-2">
-                <li class="nav-item mr-2" id="allStudents">
-                    <a class="nav-link" href="#">My Students</a>
-                </li>
-                <li class="nav-item mr-2" id="addNewAssign">
-                    <a class="nav-link" href="#">Add New Assignment</a>
-                </li>
-                <li class="nav-item mr-2" id="navLogout">
-                    <a class="nav-link" href="#">Log out</a>
-                </li>
-            </ul>
-            <span class="ml-auto navbar-text">
-                <h3></h3>
-            </span>
-        </div>
-    </nav>
+    <a class="navbar-brand" href="#">
+        <h1>My Grade Book</h1>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav ml-2">
+            <li class="nav-item mr-2" id="allStudents">
+                <a class="nav-link" href="#">My Students</a>
+            </li>
+            <li class="nav-item mr-2" id="addNewAssign">
+                <a class="nav-link" href="#">Add New Assignment</a>
+            </li>
+            <li class="nav-item mr-2" id="navLogout">
+                <a class="nav-link" href="#">Log out</a>
+            </li>
+        </ul>
+        <span class="ml-auto navbar-text">
+            <h3></h3>
+        </span>
+    </div>
+</nav>
 
 <body>
     // INDIVIDUAL STUDENTS page will take you to one particular students complete list of assignments
