--- a/public/html/teachLanding.html
+++ b/public/html/teachLanding.html
@@ -2,54 +2,84 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- ############ Reset CSS ############ -->
-    <link href="../styles/reset.css" rel="stylesheet">
-    <!-- ############ Bootstrap CDN ############ -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-        integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/styles.css" media="screen" title="no title" charset="utf-8">
-    <title>My Grade Book</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- ############ Reset CSS ############ -->
+  <link href="../styles/reset.css" rel="stylesheet">
+  <!-- ############ Bootstrap CDN ############ -->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <link rel="stylesheet" href="../styles/styles.css" media="screen" title="no title" charset="utf-8">
+  <title>My Grade Book</title>
+  <script src="../js/teacherLanding.js"></script>
 </head>
 <!-- ############ Nav Bar ############ -->
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
-        <h1>My Grade Book</h1>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    </button>
-    <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav ml-2">
-            <li class="nav-item mr-2" id="allStudents">
-                <a class="nav-link" href="#">My Students</a>
-            </li>
-            <li class="nav-item mr-2" id="addNewAssign">
-                <a class="nav-link" href="#">Add New Assignment</a>
-            </li>
-            <li class="nav-item mr-2" id="navLogout">
-                <a class="nav-link" href="#">Log out</a>
-            </li>
-        </ul>
-        <span class="ml-auto navbar-text">
-            <h3></h3>
-        </span>
-    </div>
+
+  <a class="navbar-brand" href="#">
+    <h1>My Grade Book</h1>
+  </a>
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav ml-2">
+      <li class="nav-item mr-2" id="allStudents">
+        <a class="nav-link" href="#">My Students</a>
+      </li>
+
+      <li class="nav-item mr-2" id="addNewAssign">
+        <a class="nav-link" href="#">Add New Assignment</a>
+      </li>
+
+      <li class="nav-item mr-2" id="navLogout">
+        <a class="nav-link" href="#">Log out</a>
+      </li>
+
+      <li class="nav-item mr-2 my-auto">
+        <p class="nav-link text-primary">Welcome Back <span id="user-name">USER</span></p>
+      </li>
+
+    </ul>
+
+    <span class="ml-auto navbar-text">
+      <h3></h3>
+    </span>
+
+  </div>
 </nav>
 
 <body>
-    // LANDING PAGE will show all students, the grade point average for them
-    // and a button that will take you to that students assignment page
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-3">
+        <div class="row">
+          <p class="col-3">Student ID</p>
+          <p class="col-9">Name</p>
+        </div>
+        <div id="display-students" class="row">
+        </div>
+      </div>
+      <div class="col-9">
+        <h1 class="display-4 text-center bg-light">Chart Goes Here</h1>
+      </div>
+    </div>
+    <div class="container-fluid ">
+
+    </div>
+
+  </div>
 
 
 </body>
