--- a/public/html/logInSingUp.html
+++ b/public/html/logInSingUp.html
@@ -120,7 +120,7 @@
     </div>
     <div class="jumbotron jumbotron2 jumbotron-fluid" id="loginDiv">
         <div class="container">
-            <form>
+            <form id="login">
                 <div class="row">
                     <h1>Log In</h1>
                 </div>
@@ -129,11 +129,12 @@
                     <div class="col-sm-8">
                         <div class="form-group">
                             <label for="email">Email Address</label>
-                            <input type="email" class="form-control email" placeholder="Enter email">
+                            <input type="email" class="form-control email" id="login-email" placeholder="Enter email">
                         </div>
                         <div class="form-group">
                             <label for="password">Password</label>
-                            <input type="password" class="form-control password" placeholder="Enter Password">
+                            <input type="password" class="form-control password" id="login-password"
+                                placeholder="Enter Password">
                         </div>
                         <div class="col-sm-2"></div>
                     </div>
@@ -148,97 +149,97 @@
             </form>
         </div>
     </div>
-    <script type="text/javascript">
-        displayLogin();
+    <script type="text/javascript" src="../js/firebase.js">
+        // displayLogin();
 
-        // Function to run when user clicks Register button in navbar
-        $("#navRegister").click(displayRegister);
+        // // Function to run when user clicks Register button in navbar
+        // $("#navRegister").click(displayRegister);
 
-        function displayRegister() {
-            $("#registerDiv").show();
-            $("#loginDiv").hide();
-        }
+        // function displayRegister() {
+        //     $("#registerDiv").show();
+        //     $("#loginDiv").hide();
+        // }
 
-        // Function to run when user clicks Login button in navbar
-        $("#navLogin").click(displayLogin);
+        // // Function to run when user clicks Login button in navbar
+        // $("#navLogin").click(displayLogin);
 
-        function displayLogin() {
-            console.log("login clicked");
-            $("#loginDiv").show();
-            $("#registerDiv").hide();
-        }
+        // function displayLogin() {
+        //     $("#loginDiv").show();
+        //     $("#registerDiv").hide();
+        // }
 
-        // Function to run when user clicks Logout button in navbar
-        $("#navLogout").click(userLogOut);
+        // // Function to run when user clicks Logout button in navbar
+        // $("#navLogout").click(userLogOut);
 
-        function userLogOut() {
-            console.log("logout clicked");
-            // firebase.auth().signOut();
-            $("#loginDiv").hide();
-            $("#registerDiv").hide();
-        };
+        // function userLogOut() {
+        //     console.log("logout clicked");
+        //     // firebase.auth().signOut();
+        //     $("#loginDiv").hide();
+        //     $("#registerDiv").hide();
+        // };
 
-        $("#showLogin").click(displayLogin);
+        // $("#showLogin").click(displayLogin);
 
-        $("#showRegister").click(displayRegister);
+        // $("#showRegister").click(displayRegister);
 
-        // Firebase setup
-        // Initialize Firebase
-        var config = {
-            apiKey: "AIzaSyC1BNApFh7kXWjeklAQsLoPaAQGbOw5QKI",
-            authDomain: "my-grade-book.firebaseapp.com",
-            databaseURL: "https://my-grade-book.firebaseio.com",
-            projectId: "my-grade-book",
-            storageBucket: "my-grade-book.appspot.com",
-            messagingSenderId: "928221026384"
-        };
-        firebase.initializeApp(config);
+        // // Firebase setup
+        // // Initialize Firebase
+        // var config = {
+        //     apiKey: "AIzaSyC1BNApFh7kXWjeklAQsLoPaAQGbOw5QKI",
+        //     authDomain: "my-grade-book.firebaseapp.com",
+        //     databaseURL: "https://my-grade-book.firebaseio.com",
+        //     projectId: "my-grade-book",
+        //     storageBucket: "my-grade-book.appspot.com",
+        //     messagingSenderId: "928221026384"
+        // };
+        // firebase.initializeApp(config);
 
-        // Function to run based on if user is logged in or not
-        firebase.auth().onAuthStateChanged(function (user) {
-            if (user) {
-                console.log(user);
-                // User is signed in
-                // display landing page
-            } else {
-                // No user is signed in.
-                // userLogOut();
-                // display sorry you are not recognized by our database as a student
-            }
-        });
+        // var database = firebase.database();
 
-        // Function to register a new user
-        $("#register").on("submit", function (event) {
-            event.preventDefault();
+        // // Function to run based on if user is logged in or not
+        // firebase.auth().onAuthStateChanged(function (user) {
+        //     if (user) {
+        //         // User is signed in.
+        //         console.log("it's been called");
+        //     } else {
+        //         console.log("no user signed in!");
+        //         // No user is signed in.
+        //         // userLogOut();
+        //     }
+        // });
 
-            var email = $("#register-email").val();
-            var password = $("#register-password").val();
-            console.log(email);
-            console.log(password);
-            firebase.auth().createUserWithEmailAndPassword(email, password)
-                .then(function (user) {
-                    console.log(user);
-                })
-                .catch(function (err) {
-                    console.log(err);
-                })
-        });
+        // // Function to register a new user
+        // $("#register").on("submit", function (event) {
+        //     event.preventDefault();
+        //     console.log("register was clicked!")
+        //     var email = $("#register-email").val();
+        //     var password = $("#register-password").val();
+        //     console.log(email);
+        //     console.log(password);
+        //     firebase.auth().createUserWithEmailAndPassword(email, password)
+        //         .then(function (user) {
+        //             console.log(user);
+        //         })
+        //         .catch(function (err) {
+        //             console.log(err);
+        //         })
+        // });
 
-        // Function to login existing user
-        $("#login").on("submit", function (event) {
-            event.preventDefault();
+        // // Function to login existing user
+        // $("#login").on("submit", function (event) {
+        //     event.preventDefault();
 
-            var email = $(".login .email").val();
-            var password = $(".login .password").val();
+        //     var email = $(".login .email").val();
+        //     var password = $(".login .password").val();
 
-            firebase.auth().signInWithEmailAndPassword(email, password)
-                .then(function (user) {
-                    console.log(user);
-                })
-                .catch(function (err) {
-                    console.log(err);
-                });
-        });
+        //     firebase.auth().signInWithEmailAndPassword(email, password)
+        //         .then(function (user) {
+        //             console.log(user);
+        //         })
+        //         .catch(function (err) {
+        //             console.log(err);
+        //         });
+        // });
 
     </script>
 </body>
