get charts to work

--- a/public/html/teachLanding.html
+++ b/public/html/teachLanding.html
@@ -21,6 +21,10 @@
   <link rel="stylesheet" href="../styles/styles.css" media="screen" title="no title" charset="utf-8">
   <title>My Grade Book</title>
   <script src="../js/teacherLanding.js"></script>
+
+  <!--Chart.js Library-->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  
 </head>
 <!-- ############ Nav Bar ############ -->
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
@@ -73,12 +77,9 @@
       </div>
       <div class="col-9">
         <h1 class="display-4 text-center bg-light">Chart Goes Here</h1>
+        <canvas id="myChart"></canvas>
       </div>
     </div>
-    <div class="container-fluid ">
-
-    </div>
-
   </div>
 
 
