--- a/public/html/teacherLogIn.html
+++ b/public/html/teacherLogIn.html
@@ -24,7 +24,7 @@
 </head>
 <!-- ############ Nav Bar ############ -->
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="./index.html">
+    <a class="navbar-brand" href="#">
         <h1>My Grade Book</h1>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
@@ -149,7 +149,7 @@
             </form>
         </div>
     </div>
-    <script type="text/javascript" src="../js/firebase.js"></script>
+    <script type="text/javascript" src="../js/firebaseTeacher.js"></script>
 </body>
 
 </html>
