--- a/public/html/teacherLogIn.html
+++ b/public/html/teacherLogIn.html
@@ -105,7 +105,7 @@
                             <label for="studentID">Student ID</label>
                             <input type="studentID" class="form-control password" placeholder="Enter Student ID">
                         </div>
-                        <button type="submit" class="btn btn-primary submit"><a href="#">Register</a></button>
+                        <button type="submit" id="submit" class="btn btn-primary submit"><a href="#">Register</a></button>
                     </div>
                 </div>
                 <div class="row">
