--- a/public/html/individualStudent.html
+++ b/public/html/individualStudent.html
@@ -49,6 +49,7 @@
 
 <body>
     // INDIVIDUAL STUDENTS page will take you to one particular students complete list of assignments
+    <script type="text/javascript" src="../js/firebaseTeacher.js"></script>
 </body>
 
 
