--- a/public/html/studentLogIn.html
+++ b/public/html/studentLogIn.html
@@ -24,7 +24,7 @@
 </head>
 <!-- ############ Nav Bar ############ -->
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="./index.html">
+    <a class="navbar-brand" href="#">
         <h1>My Grade Book</h1>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
@@ -107,13 +107,6 @@
                         </div>
                         <button type="submit" class="btn btn-primary submit"><a href="#">Register</a></button>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-2"></div>
-                    <div class="col-sm">
-                        <h1>Please log in once you Register</h1>
-                    </div>
-                    <div class="col-sm-2"></div>
                 </div>
             </form>
         </div>
