done for the night, finished form for adding assignment

--- a/public/html/assignment.html
+++ b/public/html/assignment.html
@@ -65,8 +65,6 @@
                                 placeholder="Enter Point Value">
                         </div>
                     </div>
-                </div>
-                <div class="row">
                     <div class="col-sm">
                         <div class="form-group">
                             <label for="assignmentDueDate">Assignment Due Date</label>
@@ -79,18 +77,21 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm"></div>
-                    <div class="col-sm">
-                        <button type="submit" id="submit" class="btn btn-primary">Submit</button>
-                    </div>
-                    <div class="col-sm"></div>
+            </div>
+            <div class="row">
+                <div class="col-sm-5"></div>
+                <div class="col-sm-2">
+                    <button type="submit" id="submit" class="btn btn-primary">Submit</button>
                 </div>
+                <div class="col-sm-5"></div>
+            </div>
         </form>
     </div>
 
     // page also has every asignment listed as well as two buttons for each assignment which are
     // edit and grade
+
+    
 
     <script type="text/javascript" src="../js/firebaseTeacher.js"></script>
 </body>
