--- a/public/html/assignment.html
+++ b/public/html/assignment.html
@@ -89,7 +89,7 @@
         </form>
     </div>
     <div class="jumbotron">
-        <h1 class="display-4">Adding New Assignment</h1>
+        <h1 class="display-4">Assignments</h1>
 
         <div class="container" id="display-assignments">
             <table class="table table-sm table-hover table-striped table-borderless table-hover">
