--- a/public/html/assignments.html
+++ b/public/html/assignments.html
@@ -98,6 +98,7 @@
             </table>
         </div>
         <script type="text/javascript" src="../js/firebaseTeacher.js"></script>
+        <script type="text/javascript" src="../js/assignments.js"></script>
 </body>
 
 
