adding student info

--- a/public/html/assignments.html
+++ b/public/html/assignments.html
@@ -82,7 +82,7 @@
             <div class="row">
                 <div class="col-sm-5"></div>
                 <div class="col-sm-2">
-                    <button type="submit" id="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" id="newAssign" class="btn btn-primary">Submit</button>
                 </div>
                 <div class="col-sm-5"></div>
             </div>
