--- a/public/html/assignments.html
+++ b/public/html/assignments.html
@@ -33,13 +33,15 @@
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav ml-2">
             <li class="nav-item mr-2" id="allStudents">
-                <a class="nav-link" href="#">My Students</a>
+                <span class="nav-link">My Students</span>
             </li>
+
             <li class="nav-item mr-2" id="addNewAssign">
-                <a class="nav-link" href="#">Add New Assignment</a>
+                <span class="nav-link">Add New Assignment</span>
             </li>
+
             <li class="nav-item mr-2" id="navLogout">
-                <a class="nav-link" href="#">Log out</a>
+                <span class="nav-link">Log out</span>
             </li>
         </ul>
         <span class="ml-auto navbar-text">
