--- a/public/html/teachLanding.html
+++ b/public/html/teachLanding.html
@@ -41,15 +41,15 @@
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav ml-2">
       <li class="nav-item mr-2" id="allStudents">
-        <a class="nav-link" href="#">My Students</a>
+        <span class="nav-link">My Students</span>
       </li>
 
       <li class="nav-item mr-2" id="addNewAssign">
-        <a class="nav-link" href="#">Add New Assignment</a>
+        <span class="nav-link">Add New Assignment</span>
       </li>
 
       <li class="nav-item mr-2" id="navLogout">
-        <a class="nav-link" href="#">Log out</a>
+        <span class="nav-link">Log out</span>
       </li>
 
       <li class="nav-item mr-2 my-auto">
@@ -83,7 +83,7 @@
     </div>
   </div>
 
-  <script type="text/javascript" src="../js/firebase.js"></script>
+  <script type="text/javascript" src="../js/firebaseteacher.js"></script>
 
 </body>
 
