--- a/public/html/teacherLogIn.html
+++ b/public/html/teacherLogIn.html
@@ -33,13 +33,13 @@
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav ml-2">
             <li class="nav-item mr-2" id="navLogin">
-                <a class="nav-link" href="#">Log in</a>
+                <span class="nav-link">Log in</span>
             </li>
             <li class="nav-item mr-2" id="navRegister">
-                <a class="nav-link" href="#">Register</a>
+                <span class="nav-link">Register</span>
             </li>
             <li class="nav-item mr-2" id="navLogout">
-                <a class="nav-link" href="#">Log out</a>
+                <span class="nav-link">Log out</span>
             </li>
         </ul>
         <span class="ml-auto navbar-text">
