Write out for loop for student info

--- a/public/html/individualStudent.html
+++ b/public/html/individualStudent.html
@@ -65,10 +65,14 @@
             </div>
         </div>
         <div>
+            <div>
+                <h2 class="text-center" id="studentNameDisplay">
+                    Name: 
+                </h2>
+            </div>
             <table class="table">
                 <thead>
                     <tr>
-                        <th scope="col">Name</th>
                         <th scope="col">Assignment</th>
                         <th scope="col">Grade</th>
                     </tr>
