--- a/public/html/gradeAssign.html
+++ b/public/html/gradeAssign.html
@@ -54,11 +54,14 @@
     <div class="jumbotron">
         <h1 class="display-4">Grading Assignment</h1>
     </div>
-
-    // page has an input for every single grade for every student in the class
-
-
+    <div class="container" id="display-assignments">
+        <table class="table table-sm table-hover my-auto table-striped table-borderless table-hover">
+            <tbody>
+            </tbody>
+        </table>
+    </div>
     <script type="text/javascript" src="../js/firebaseTeacher.js"></script>
+    <script type="text/javascript" src="../js/gradeAssign.js"></script>
 </body>
 
 
