modify any one stduent's grades works

--- a/public/html/individualStudent.html
+++ b/public/html/individualStudent.html
@@ -92,14 +92,14 @@
         </div>
         <div>
             <div>
-                <h2 class="text-center" id="studentNameDisplay">
-                    Name:
+                <h2 class="text-center" >
+                    Grades for <span id="studentNameDisplay">...</span>
                 </h2>
             </div>
-            <table class="table">
+            <table class="table text-center">
                 <thead>
                     <tr>
-                        <th scope="col">Assignment</th>
+                        <th scope="col">Assignment Name</th>
                         <th scope="col">Grade</th>
                     </tr>
                 </thead>
