--- a/public/html/assignments.html
+++ b/public/html/assignments.html
@@ -33,18 +33,22 @@
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav ml-2">
             <li class="nav-item mr-2" id="allStudents">
-                <span class="nav-link">My Students</span>
+                <a href="/teacher" class="nav-link">My Students</a>
             </li>
 
             <li class="nav-item mr-2" id="addNewAssign">
-                <span class="nav-link">Add New Assignment</span>
+                <a href="/assignments" class="nav-link">Add New Assignment</a>
             </li>
             <li>
                 <a href="/student" class="nav-link">One Student</a>
             </li>
 
             <li class="nav-item mr-2" id="navLogout">
-                <span class="nav-link">Log out</span>
+                <a class="nav-link">Log out</a>
+            </li>
+
+            <li class="nav-item mr-2 my-auto">
+                <p class="nav-link text-primary">Welcome Back <span id="user-name">USER</span></p>
             </li>
         </ul>
         <span class="ml-auto navbar-text">
