slight mods to landing page

--- a/public/html/teachLanding.html
+++ b/public/html/teachLanding.html
@@ -72,8 +72,8 @@
             <thead>
               <th scope="col">#</th>
               <th scope="col">Name</th>
-              <th scope="col">Grades</th>
-              <th scope="col">page</th>
+              <th scope="col">Overall Grade</th>
+              <th scope="col">Student Page</th>
             </thead>
             <tbody id="display-students">
             </tbody>
